# hellocpp11

./: .gitignore  Makefile  Makefile.am  configure.ac  main.cpp
src/: func.cpp  func.h  main.cpp
